external-crates/move/crates/move-compiler/tests/move_check/parser/function_type_extra_comma.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_type_extra_comma.move:2:12
  │
2 │     fun fn<,T>() { } // Test a comma before the first type parameter
  │            ^ Unexpected ','. Expected a type parameter
