external-crates/move/crates/move-compiler/tests/move_check/parser/function_type_extra_comma.move
module 0x42::M {
    fun fn<,T>() { } // Test a comma before the first type parameter
}
